filling in project pages

--- a/chess.html
+++ b/chess.html
@@ -14,7 +14,7 @@
 		<div class="page-nav-item right" onclick="openPage('index.html')">HOME ></div>
 	</div>
   	<div class="page-title">Chess Store</div>
-  	<div class="date">Spring 2017 | Application Design and Development</div>
+  	<div class="project-info">Spring 2017 | Application Design and Development</div>
   	<div class="content margin-small">
 		<div class="summary"><div class="subheader2">Context</div>Lorem ipsum...</div>
 		
