--- a/upark.html
+++ b/upark.html
@@ -13,46 +13,143 @@
 		<div class="page-nav-item center" onclick="openPage('index.html')">HOME</div>
 		<div class="page-nav-item right" onclick="openPage('miles.html')">MILES ></div>
 	</div>
-  	<div class="page-title">UPark</div>
-  	<div class="date">Fall 2017 | Interaction Design Overview</div>
-  	<div class="content margin-small">
-		<div class="summary"><div class="subheader2">Context</div>Lorem ipsum...</div>
-		
-		<div class="summary"><div class="subheader2">Team</div>Lorem ipsum...</div>
-		
-		<div class="summary">
-		<div class="subheader2">Skills</div> 
-		<li>Lorem ipsum...</li> 
-		<div class="subheader2">Tools</div> 
-		<li>Lorem ipsum...</li>
-		</div>
-		
-		<div class="summary"><div class="subheader2">Problem Statement</div> 
-		Lorem ipsum...
-		<div class="subheader2">Project Vision</div>
-		Lorem ipsum...
-		</div>
-  	</div>
+	<div id="upark" class="margin-small">
+	  	<div class="page-title">UPark</div>
+	  	<div class="project-info">Fall 2017 | Interaction Design Overview | <a href="https://xd.adobe.com/view/e6f7478c-22bb-4439-af47-3c3a3976e3d0/screen/0e7bd19b-2882-4232-8812-af53c774a6e8/Reservations-Upcoming/">Prototype</a></div>
+	  	<div class="content">
+			<div class="summary">
+				<div class="subheader2">Context</div>
+				This is a parking space sharing app that I worked on in Interaction Design Overview (IxDO), a core class of the HCI minor. IxDO is a studio course that offers a broad overview of communication and interaction design, through which students learn design methodologies such as brainstorming, sketching, storyboarding, wire framing, and prototyping.
+			</div>
+			
+			<div class="summary">
+				<div class="subheader2">Team</div>
+				I worked in an interdisciplinary team of four.
+			</div>
+			
+			<div class="summary">
+				<div class="subheader2">Skills</div> 
+					<li>Personas</li> 
+					<li>Scenarios</li>
+					<li>Storyboarding</li>
+					<li>Wireraming</li>
+					<li>Prototyping</li>
+					<li>Presenting</li>
+				<div class="subheader2">Tools</div> 
+					<li>Adobe XD</li>
+					<li>Adobe Photoshop</li>
+					<li>Google Slides</li>
+			</div>
+			
+			<div class="summary">
+				<div class="subheader2">Problem Statement</div> 
+				Homeowners and landlords want to securely utilize their vacant parking spaces, and students, commuters, and tourists want a convenient way to find affordable parking spaces near their schools or workplaces.
+				<div class="subheader2">Project Vision</div>
+				The solution our group implemented created value in the following areas:
+					<li>Security – Instills a sense of safety in users of the system through review system.</li>
+					<li>Flexibility – Ease of use for both one-time and recurring users.</li>
+					<li>Simplicity – Clear, user-friendly interface.</li>
+			</div>
+	  	</div>
 
-  	<div class="page-title">Process</div>
-  	<div class="process-overview margin-small">
+	  	<div class="page-title">Final Product</div>
+	  	<div>
+	  		<div class="final-product-text">
+	  			View the full prototype <a href="https://xd.adobe.com/view/e6f7478c-22bb-4439-af47-3c3a3976e3d0/screen/0e7bd19b-2882-4232-8812-af53c774a6e8/Reservations-Upcoming/" target="_blank">here!</a> Selected screens are below:
+	  		</div>
+	  		<img class="product-pic-small" src="pics/upark/map.png">
+	  		<img class="product-pic-small" src="pics/upark/list.png">
+	  		<div class="caption">Users can search for parking spots near them and view the results as a map or list.</div>
+	  		<img class="product-pic-small" src="pics/upark/spot.png">
+	  		<div class="caption">
+	  			Reserving a spot is easy!
+	  			<p>Users can keep track of upcoming and past reservation with this calendar</p></div>
+	  		<img class="product-pic-small" src="pics/upark/calendar.png">
+	  	</div>  	
 
-		<button class="accordion">Something</button>
-		<div class="panel">
-		  <p>Lorem ipsum...	
-		</div>
-  	</div>
+	  	<div class="page-title">Process</div>
+	  	<div class="process-overview">
 
-  	<div class="page-title">Final Product</div>
-  	<div class="margin-small">
-  		<div class="final-product-text">
-  			View the full prototype <a href="website" target="_blank">here!</a> Selected screens are below:
-  		</div>
-  		<img class="product-pic" src="whatever">
-  		<div class="caption">This is a caption</div>
-  	</div>
+			<button class="accordion">Personas</button>
+			<div class="panel">
 
-  	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
+				<p>
+					<p>Given existing research (including customer journey maps, ecosystem collection, 'how might we' statements, interviews) our team created a few potential users of the platform.</p>
+			  		
+			  		<img class="product-pic-small" src="pics/upark/persona1.jpg">
+			  		<div class="caption-large">	
+			  			<b>David</b> is a father of two, aged 3 and 5, and has lived in his house for 6 years in a peaceful neighborhood. He doesn’t mind the idea of lending out his driveway to help others’ parking issues, but he has a lot of concerns. What if the renter disturbs the neighbors? What if the renter drives across his lawn and destroys it? How would the transactions be secured? How would the safety of the household be ensured? He’s not sure if it’s worthwhile to risk all of these problems for just a small amount of money.
+			  		</div>
+
+			  		<img class="product-pic-small" src="pics/upark/persona2.jpg">
+			  		<div class="caption-large">	
+						<b>Jenny</b> is a senior at Carnegie Mellon who lives on Beeler Street, directly adjacent to campus, and has one available parking spot that neither she nor her two other housemates use. Jenny would benefit from some extra spending money, and is used to her friends asking if they can park at her house. She does not mind sharing the space with friends, but she does not know how to connect with other people looking to find parking. She would rent out her space if she could quickly and easily find trustworthy people to rent her parking spot to.
+			  		</div>
+
+			  		<img class="product-pic-small" src="pics/upark/persona3.jpg">
+			  		<div class="caption-large">	
+			  			<b>Chris</b> is in his late 50s and is a tourist visiting Pittsburgh for the first time. Chris has a car and wants to drive around Pittsburgh to visit popular tourist destinations such as Benedum Center and the Cathedral of Learning. He wants to optimize his time sightseeing in Pittsburgh and doesn’t mind paying extra money to find parking spaces near the tourist destinations if it means he is guaranteed a space for that period of time. He is not tech savvy and isn’t familiar with using peer economy applications like Uber or Airbnb.
+			  		</div>
+
+			  		<img class="product-pic-small" src="pics/upark/persona4.png">
+			  		<div class="caption-large">	
+			  			<b>Charlotte</b> is an employee at Duolingo in East Liberty and drives her car to work every day. She doesn’t have a parking permit and Duolingo doesn’t have employee parking. Whenever she drives to work, she usually circles the surrounding blocks until a space opens up. Duolingo isn’t strict about work hours, but Charlotte prefers to work from 9-5 so she has time to exercise at the gym after work. Charlotte is also a relatively tech-savvy person, an early tech adopter, and often uses websites such as Uber, Lyft, Airbnb that employ peer economies.
+			  		</div>
+				</p>
+
+			</div>
+
+			<button class="accordion">Scenarios</button>
+			<div class="panel">
+			  	<p>
+				<b>David</b> wants to ensure the harmony of his household as well as the neighborhood. He cares about his wife and his kids’ safety, and doesn’t want to disrupt the neighbors and ruin the good relationships with them. Our website would provide a platform where security is prioritized, with possible third-party monitor or rating / report systems that ensures a safe network for people.
+				</p>
+				<p>
+				<b>Jenny</b> has an unused parking spot in front of her house and would like to be able to utilize it to make money. Right now, Jenny lets her friends park there sometimes, but otherwise it sits there vacant 80% of the time and she doesn’t really know how to advertise that she would like to rent her spot out. Our website will give Jenny an easy-to-use platform with which to make money by matching her with individuals who need the service her parking spot provides.
+				</p>
+				<p>
+				<b>Chris</b> wants to reliably and quickly find a parking spot while he visits Pittsburgh. He does not want to deal with the stress and waste time searching for a parking spot, but is not particularly tech savvy. Our website will provide an intuitive, clear interface that Chris can use seamlessly to find parking spots in minutes.
+				</p>
+				<p>
+				As an employee who drives to work everyday in East Liberty, <b>Charlotte</b> wants a consistent place to park her car every day. Because she doesn’t have a parking permit and there is no employee parking, it is often difficult for her to find space near her office, so she usually circles the surrounding blocks until a space opens up, which often frustrates her and makes her anxious about being late to work. Our website allows Charlotte to sign up and rent a space near her office to consistently park on the weekdays so that she is guaranteed to have a space to prevent her from wasting time looking for spaces and stressing about being late for work.
+			  	</p>
+			</div>
+
+			<button class="accordion">Storyboard</button>
+			<div class="panel">
+			  <p>Based on several “how might we” statements, the team created several storyboards depicting potential early features of the platform. The storyboard below illustrates a scenario in which both renters and lenders are satisfied by the security and ease of use of the app.</p>
+			  <img style="width: 80%; margin-left: 10%; margin-right: 10%" src="pics/upark/storyboard.png">
+			  <div class="caption-grid" style="margin-left: 10%">
+			  	"Plenty of driveways sit vacant while individuals who need a parking spot waste time looking for street parking"
+			  </div>
+			  <div class="caption-grid">
+			  	"Renters and lenders are afraid of security issues when it comes to interactions with strangers involving their homes and cars."
+			  </div>
+			  <div class="caption-grid">
+			  	"This easy-to-use system allows users to to link bank accounts to the site and pay with the touch of a button"
+			  </div>
+			  <div class="caption-grid" style="margin-right: 10%"">
+			  	"Users trust the app, renters make some extra cash, and lenders have a place to park"
+			  </div>
+			</div>
+
+			<button class="accordion">Wireframes</button>
+			<div class="panel">
+			  <p>Building upon our wireframes, we iterated on our screen designs and added photos to bring the screens to life and look more similar to a web application. We rounded the edges of the tabs and buttons, and we organized the text on the screen to be more legible. To allow for easier and clearer navigation between pages, we added a navigation bar at the bottom of each screen to navigate between the user’s profile, reservations, calendar, and transactions.</p>
+			  <img class="product-pic-smaller" src="pics/upark/wireframe-list.png">
+			  <img class="product-pic-smaller" src="pics/upark/wireframe-map.png">
+			  <img class="product-pic-smaller" src="pics/upark/wireframe-book.png">
+			</div>
+
+			<button class="accordion">Mood Board and Style Guide</button>
+			<div class="panel">
+			  <p>Lorem ipsum...	</p>
+			</div>
+
+	  	</div>
+
+	  	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
+	  </div>
   </body>
 
   <script src="js/general.js"></script>
