--- a/atlantis.html
+++ b/atlantis.html
@@ -14,7 +14,7 @@
 		<div class="page-nav-item right" onclick="openPage('chess.html')">CHESS STORE ></div>
 	</div>
   	<div class="page-title">Atlantis</div>
-  	<div class="date">Fall 2017 | Interaction Design Overview</div>
+  	<div class="project-info">Fall 2017 | Interaction Design Overview</div>
   	<div class="content margin-small">
 		<div class="summary"><div class="subheader2">Context</div>Lorem ipsum...</div>
 		
