--- a/zensors.html
+++ b/zensors.html
@@ -14,7 +14,7 @@
 		<div class="page-nav-item right" onclick="openPage('upark.html')">UPARK ></div>
 	</div>
   	<div class="page-title">Zensors</div>
-  	<div class="date">Spring 2018 | Social Web</div>
+  	<div class="project-info">Spring 2018 | Social Web</div>
   	<div class="content margin-small">
 		<div class="summary"><div class="subheader2">Context</div>Lorem ipsum...</div>
 		
