--- a/upark.html
+++ b/upark.html
@@ -5,6 +5,7 @@
     <title>UPark</title>
     <link rel="stylesheet" type="text/css" href="styles/global.css">
     <link rel="stylesheet" type="text/css" href="styles/newstagram.css">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   </head>
 
   <body>
@@ -143,7 +144,9 @@
 
 			<button class="accordion">Mood Board and Style Guide</button>
 			<div class="panel">
-			  <p>Lorem ipsum...	</p>
+			  <p>After creating greyscale prototypes, the team put together a mood board to capture the feelings we wanted to elicit from the user. We wanted to achieve a calm, secure, and orderly theme. The style guide takes elements of the mood board to provide a cohesive style throughout the app.</p>
+			  <img class="product-pic-medium" src="pics/upark/mood.jpg" style="margin-left: 5%">
+			  <img class="product-pic-medium" src="pics/upark/style.jpg" style="margin-right: 5%">
 			</div>
 
 	  	</div>
