--- a/chutzpow.html
+++ b/chutzpow.html
@@ -4,6 +4,7 @@
   <head>
     <title>Chutz-Pow!</title>
     <link rel="stylesheet" type="text/css" href="styles/global.css">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   </head>
 
   <body>
