--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
   <head>
     <title>Home</title>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="styles/global.css">
     <link rel="stylesheet" type="text/css" href="styles/home.css">
     <link rel="stylesheet" type="text/css" href="styles/nav.css">
@@ -32,7 +33,7 @@
     </div>
     <img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
 
-    <div id="about" class="margin-small">
+    <div id="about" class="section margin-small">
       <div id="about-me">
         <div id="about-title">About Me</div>
         <div class="about-text">I am an incoming senior at Carnegie Mellon University studing Information Systems and Human-Computer Interaction.</div>
@@ -40,7 +41,7 @@
         <div class="about-text">I’ll be interning at Deloitte this summer as a Business Technology Analyst in Arlington, VA!</div>
       </div>
 
-      <div id="fave-classes">
+      <div id="fave-classes" class="section">
         <div id=faves-title>Favorite Classes</div>
         <ul style="list-style-type:disc">
           <li>Interaction Design Overview</li>
@@ -53,7 +54,7 @@
       </div>
     </div>
 
-    <div id="skills">
+    <div id="skills" class="section">
       
       <div id="title">I have experience with</div>
       <div class="divider"></div>
@@ -78,7 +79,8 @@
 
     <div id="projects-title">PROJECTS</div>
     <div id="projects" class="margin-small">
-      <div class="project" onclick="openPage('newstagram.html')">
+
+      <div class="project section" onclick="openPage('newstagram.html')">
         <img src="pics/newig.png" class="project-pic">
         <div class="captions">A redesigned version of Instagram with the goal of promoting authenticity.</div>
         <div class="overlay">
@@ -86,7 +88,7 @@
         </div>
       </div>
 
-      <div class="project" onclick="openPage('chutzpow.html')">
+      <div class="project section" onclick="openPage('chutzpow.html')">
         <img src="pics/hc.png" class="project-pic">
         <div class="captions">An educational platform showcasing the history of the Holocaust.</div>
         <div class="overlay">
@@ -95,7 +97,7 @@
       </div>
 
 
-      <div class="project" onclick="openPage('zensors.html')">
+      <div class="project section" onclick="openPage('zensors.html')">
         <img src="pics/zensors.jpg" class="project-pic">
         <div class="captions">An interface for crowdworkers to answer questions.</div>
         <div class="overlay">
@@ -104,7 +106,7 @@
       </div>
 
 
-      <div class="project" onclick="openPage('upark.html')">
+      <div class="project section" onclick="openPage('upark.html')">
         <img src="pics/upark.jpg" class="project-pic">
         <div class="captions">A mobile app that connects people with unused driveways to those in need of a place to park.</div>
         <div class="overlay">
@@ -113,7 +115,7 @@
       </div>
 
 
-      <div class="project" onclick="openPage('miles.html')">
+      <div class="project section" onclick="openPage('miles.html')">
         <img src="pics/miles.jpg" class="project-pic">
         <div class="captions">A conversational user interface for owners of self-driving cars.</div>
         <div class="overlay">
@@ -122,7 +124,7 @@
       </div>
 
 
-      <div class="project" onclick="openPage('atlantis.html')">
+      <div class="project section" onclick="openPage('atlantis.html')">
         <img src="pics/atlantis.jpg" class="project-pic">
         <div class="captions">A data-driven environmental display featuring information about planes, trains, and ferries.</div>
         <div class="overlay">
@@ -131,7 +133,7 @@
       </div>
 
 
-      <div class="project" onclick="openPage('chess.html')">
+      <div class="project section" onclick="openPage('chess.html')">
         <img src="pics/chess.jpg" class="project-pic">
         <div class="captions">A chess store with interfaces for four different users: Customers, Shippers, Managers, and Admin.</div>
         <div class="overlay">
