--- a/miles.html
+++ b/miles.html
@@ -5,6 +5,7 @@
     <title>Miles</title>
     <link rel="stylesheet" type="text/css" href="styles/global.css">
     <link rel="stylesheet" type="text/css" href="styles/newstagram.css">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   </head>
 
   <body>
@@ -13,46 +14,168 @@
 		<div class="page-nav-item center" onclick="openPage('index.html')">HOME</div>
 		<div class="page-nav-item right" onclick="openPage('atlantis.html')">ATLANTIS ></div>
 	</div>
-  	<div class="page-title">Miles</div>
-  	<div class="project-info">Fall 2017 | Interaction Design Overview</div>
-  	<div class="content margin-small">
-		<div class="summary"><div class="subheader2">Context</div>Lorem ipsum...</div>
-		
-		<div class="summary"><div class="subheader2">Team</div>Lorem ipsum...</div>
-		
-		<div class="summary">
-		<div class="subheader2">Skills</div> 
-		<li>Lorem ipsum...</li> 
-		<div class="subheader2">Tools</div> 
-		<li>Lorem ipsum...</li>
-		</div>
-		
-		<div class="summary"><div class="subheader2">Problem Statement</div> 
-		Lorem ipsum...
-		<div class="subheader2">Project Vision</div>
-		Lorem ipsum...
-		</div>
-  	</div>
+	<div id="miles" class="margin-small">
+	  	<div class="page-title">Miles</div>
+	  	<div class="project-info">Fall 2017 | Interaction Design Overview | <a href="https://www.youtube.com/watch?v=uT68SYJpt50">Video</a></div>
+	  	<div class="content">
+			<div class="summary"><div class="subheader2">Context</div>The task was to design a conversational interface (e.g. Siri, Alexa) that would be integrated with a self driving car. The assignment was left very open-ended, and we had jurisdiction over specific users to target and areas to focus on.</div>
+			
+			<div class="summary"><div class="subheader2">Team</div>I was place in an interdisciplinary team of four.</div>
+			
+			<div class="summary">
+			<div class="subheader2">Skills</div> 
+			<li>User stories</li> 
+			<li>Ecosystem collection</li>
+			<li>Competitive analysis</li>
+			<li>Scenarios</li>
+			<li>User testing</li>
+			</div>
+			
+			<div class="summary"><div class="subheader2">Problem Statement</div> 
+			How does one improve the user experience of riding in a self driving car with solely verbal interaction?
+			</div>
+	  	</div>
 
-  	<div class="page-title">Process</div>
-  	<div class="process-overview margin-small">
+	  	<div class="page-title">Final Product</div>
+	  	<div>
+	  		<div class="final-product-text">
+	  			View the product video <a href="https://www.youtube.com/watch?v=uT68SYJpt50" target="_blank">here</a> or watch below:
+	  		</div>
+	  		<iframe class="product-video" src="https://www.youtube.com/embed/uT68SYJpt50?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+	  	</div>
 
-		<button class="accordion">Something</button>
-		<div class="panel">
-		  <p>Lorem ipsum...	
-		</div>
-  	</div>
+	  	<div class="page-title">Process</div>
+	  	<div class="process-overview">
 
-  	<div class="page-title">Final Product</div>
-  	<div class="margin-small">
-  		<div class="final-product-text">
-  			View the full prototype <a href="website" target="_blank">here!</a> Selected screens are below:
-  		</div>
-  		<img class="product-pic" src="whatever">
-  		<div class="caption">This is a caption</div>
-  	</div>
+			<button class="accordion">User Stories</button>
+			<div class="panel">
+			  <div class="c3">
+			  	<div class="h4">As an owner of a driverless car...</div>
+					<p>I want to arrive at my destination on time.</p>
+					<p>I want to ensure that the car is not damaged.</p>
+					<p>I want to feel pride in my car.</p>
+					<p>I want to make sure my passengers are happy.</p>
+			  </div>
+			  <div class="c3">
+			  	<div class="h4">As a passenger in a driverless car...</div>
+			  		<p>I want to be aware of the route I am taking.</p>
+			  		<p>I want to be able to multitask but still feel safe.</p>
+			  </div>
+			  <div class="c3">
+			  	<div class="h4">As either a passenger or owner...</div>
+					<p>I want to be able to understand their environment (temperature, gas mileage, settings) easily.</p>
+					<p>I want to be comfortable at all times.</p>
+					<p>I want to be able to multitask but still feel safe.</p>
+			  </div>
+			</div>
 
-  	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
+			<button class="accordion">Competitive Analysis</button>
+			<div class="panel">
+				<p>
+				We conducted research on several existing CUI platforms and summarized our findings below:
+				<table style="width:100%">
+				  <tr>
+				    <th>Features</th>
+				    <th>Amazon Alexa</th> 
+				    <th>Google Home</th>
+				    <th>Cortana</th>
+				    <th>Siri</th>
+				  </tr>
+				  <tr>
+				    <td>Wake Command Word</td>
+				    <td>“Alexa, Echo, Amazon”</td> 
+				    <td>“OK Google”</td>
+				    <td>“Hey Cortana”</td>
+				    <td>“Hey Siri"</td>
+				  </tr>
+				  <tr>
+				    <td>Standalone Hardware Device</td>
+				    <td>Yes [Echo, Echo Dot, Echo Show, Echo Spot]</td> 
+				    <td>Yes [Google Home, Google Home Mini]</td>
+				    <td>No [used on Windows 10</td> 
+				    <td>No [used on iPhone, iPad]</td>
+				  </tr>
+				  <tr>
+				    <td>Music Streaming Platform</td>
+				    <td>Prime Music, Spotify, Pandora, TuneIn, iHeartRadio</td> 
+				    <td>Google Music, Spotify, Pandora, TuneIn</td>
+				    <td>Groove Music library</td> 
+				    <td>Apple Music Library</td>
+				  </tr>
+				  <tr>
+				    <td>Strengths</td>
+				    <td>Many features/skills and synced services, adapts to each individual user</td> 
+				    <td>Focuses on integrating with the home (creating a Smart Home), syncs very well with all Google services</td>
+				    <td>Wide range of skills, good organizational integration, uses ML to improve over time</td> 
+				    <td>21 languages, availability (on all iPhones)</td>
+				  </tr>
+				  <tr>
+				    <td>Weaknesses</td>
+				    <td>Few languages spoken, requires separate hardware</td> 
+				    <td>Few skills, requires separate hardware</td>
+				    <td>Not popular among standard users (as opposed to business professionals)</td> 
+				    <td>Fewer features, unreliable wake command</td>
+				  </tr>
+				</table>
+				</p>
+			</div>
+
+			<button class="accordion">Scenarios</button>
+			<div class="panel">
+			  	<p>
+			  	We identified several different potential users, including those who own self driving vehicles and those who would be using this CUI through a ridesharing platform, as well as blind people, students, commuters, and senior citizens. Based on redundancies between use cases and personal interest, we decided to narrow our target audience to commuters who own their own vehicle.
+			  	</p>
+			  	<p>
+				<b>Goal:</b> As an employee at Duolingo with a very busy schedule of many ongoing projects, Joe wants to stay productive during his commute each day to work and stay on top of his work schedule.
+				</p>
+				<p>
+				<b>Context:</b> Joe lives an hour outside of the city and owns a driverless car to commute to work. He enjoys the fact that he doesn’t have to drive during his commute, but since he has a very busy schedule that is constantly changing, he finds it to be a hassle to constantly verify that he is going to get to work on time, updates to his work schedule, and even adjust the environment within the car. He is very comfortable with having devices connected to one another and wishes that he could verbally speak to an assistant so that he could quickly make updates to his schedule within constantly checking on his laptop.
+				</p>
+				<p>
+				<b>Solution:</b> By having a virtual assistant in the driverless car to speak to, Joe can easily have the conversational interface list out his agenda for the day, set meetings, email his co-workers, and tell updates about the status of his commute. Joe can then focus on his work and not have to worry about the logistics of his commute and work schedule. 
+			  	</p>
+			</div>
+
+			<button class="accordion">Prototyping Session</button>
+			<div class="panel">
+			  	<div style="float: left; width: 40%; margin-right: 5%;">
+			  		<p>After completing scenarios and determining the scope of the CUI, we had a prototyping session in which I played the CUI and another classmate (not on my team) played a user. </p>
+			  		<p>This enactment provided valuable feedback for us, especially about the types of user error our system would have to handle.</p>
+			  	</div>
+			  	<p>
+			  		<img src="pics/miles/prototyping.png" style="float: right; width: 50%; margin-left: 5%;">
+			  	</p>
+			</div>
+
+			<button class="accordion">Revised Scenario</button>
+			<div class="panel">
+			  	<p>
+				We took the feedback we received from the prototyping session into account, and revised our original scenario to be more specific and address the precise features we wanted to highlight.
+				</p>
+				<p>
+				<b>Goal:</b> During his commute to work, Joe wants to be able to get to work as fast as possible amid the busy LA traffic.
+				</p>
+				<p>
+				<b>Context:</b> Joe works at Universal Studios in Los Angeles. Since he is not a morning person, Joe often wakes up late and is in a rush to get to work on time. Since he works at the studios, sometimes on the way to work, his destination needs to change when his team decides to shoot in a new location at the last minute. Joe also then needs to coordinate with the rest of his team about the destination change and modify his schedule for the day accordingly.
+				</p>
+				<p>
+				<b>Solution:</b> Through quick interaction with a conversational user interface in the car, Joe can easily know the status of his commute, communicate with his team, and update his schedule. In the case of last-minute location changes, Joe will easily be notified by the CUI that there has been a location change, and Joe can update his destination so that the driverless car can quickly re-route to the new place. The CUI can provide updates on the status of his commute amidst traffic, road closures, changes in estimated times of arrival and/or destination, and the virtual assistant can also relay the information to his team if desired so that his team is also notified and can easily track his status. In addition, Joe can phone or text his co-workers quickly and coordinate his schedule for the rest of the day. Overall, with a driverless car and CUI, Joe can worry less about the logistics of his commute and schedule and focus more on his actual work.
+			  	</p>
+			</div>
+
+			<button class="accordion">Video Planning</button>
+			<div class="panel">
+			  	<p>
+			  	The final deliverable for this project was a short product video. In planning for this, we created two conversation models, one for a user updating his or her schedule, and another for rerouting when changing a destination. This involved identifying the user utterance, the CUI response, and the characteristics of the CUI.
+			  	</p>
+			  	<p>
+				Once these models were established, we created a visual video script that detailed the concept, script, visuals, and transition for each shot.
+				</p>
+			</div>
+	  	</div>
+
+	  	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
+	  </div>
   </body>
 
   <script src="js/general.js"></script>
