--- a/atlantis.html
+++ b/atlantis.html
@@ -15,45 +15,144 @@
 		<div class="page-nav-item right" onclick="openPage('chess.html')">CHESS STORE ></div>
 	</div>
   	<div class="page-title">Atlantis</div>
-  	<div class="project-info">Fall 2017 | Interaction Design Overview</div>
-  	<div class="content margin-small">
-		<div class="summary"><div class="subheader2">Context</div>Lorem ipsum...</div>
-		
-		<div class="summary"><div class="subheader2">Team</div>Lorem ipsum...</div>
-		
-		<div class="summary">
-		<div class="subheader2">Skills</div> 
-		<li>Lorem ipsum...</li> 
-		<div class="subheader2">Tools</div> 
-		<li>Lorem ipsum...</li>
-		</div>
-		
-		<div class="summary"><div class="subheader2">Problem Statement</div> 
-		Lorem ipsum...
-		<div class="subheader2">Project Vision</div>
-		Lorem ipsum...
-		</div>
+  	<div class="project-info">
+  		Fall 2017 | Interaction Design Overview | <a href="https://www.youtube.com/watch?v=gH_H0uQTa00&feature=youtu.be" target="_blank">Video</a>
   	</div>
+  	
+  	<div id="atlantis">
+	  	<div class="content">
+			<div class="summary">
+				<div class="subheader2">Context</div>
+				Given a spreadsheet of unorganized raw data and personas of users and stakeholders, we were tasked with designing an environmental display featuring information about planes, trains, and ferries. The project followed an iterative design process that was centered around analyzing stakeholder and user needs. 
+				<p>We moved from hand-drawn sketches to digital drawings and finally incorporated color into the design. The last step was to integrate animation into the design to take advantage of the display’s capability to show different types of data.</p>
+			</div>
+			
+			<div class="summary">
+				<div class="subheader2">Team</div>
+				This was an individual project.
+			</div>
+			
+			<div class="summary">
+				<div class="subheader2">Skills</div> 
+					<li>Information architecture</li> 
+					<li>Data analysis</li>
+					<li>Wireframing</li>
+					<li>Typography</li>
+					<li>Visual design</li>
+				<div class="subheader2">Tools</div> 
+					<li>Adobe Photoshop</li>
+					<li>Keynote</li>
+			</div>
+			
+			<div class="summary">
+				<div class="subheader2">Problem Statement</div> 
+					Locals of the San Juan Islands want to be able to utilize a display to plan their day trips, traveling businesspeople want to be able to plan their trips around weather, and the manager of the transportation company wants to advertise the PTF pass, a pass that bundles multiple trips for a better deal.
+				<div class="subheader2">Project Vision</div>
+					My design addresses the needs of my users and stakeholders by providing clear, quick, visually appealing information.
+					<p>1)  The PTF pass is highlighted.</p>
+					<p>2)  Relevant information for frequent and spontaneous travelers like weather and a timeline are provided.</p>
+					<p>3)  Novice travelers can also use this display easily by looking at the map and the clear data tables.</p>
+	  		</div>
+	  	</div>
 
-  	<div class="page-title">Process</div>
-  	<div class="process-overview margin-small">
+	  	<div class="page-title">Final Product</div>
+	  	<div>
+	  		<div class="final-product-text">
+	  			View the video prototype <a href="https://www.youtube.com/watch?v=gH_H0uQTa00&feature=youtu.be" target="_blank">here!</a> Static screen is below:
+	  		</div>
+	  		<img class="product-pic-bigger" src="pics/atlantis/atlantis.jpg">
+	  	</div>
 
-		<button class="accordion">Something</button>
-		<div class="panel">
-		  <p>Lorem ipsum...	
-		</div>
-  	</div>
+	  	<div class="page-title">Process</div>
+	  	<div class="process-overview margin-small">
 
-  	<div class="page-title">Final Product</div>
-  	<div class="margin-small">
-  		<div class="final-product-text">
-  			View the full prototype <a href="website" target="_blank">here!</a> Selected screens are below:
-  		</div>
-  		<img class="product-pic" src="whatever">
-  		<div class="caption">This is a caption</div>
-  	</div>
+			<button class="accordion">Data Modeling</button>
+			<div class="panel">
+			  <div class="text-small">
+			  	The first step was exploring and structuring the data (shown) in class. After I had a feel for the attributes I would be working with and their values, I actually began modeling out the data and picking through what was important and what wasn’t.
+			  </div>
+			  <img class="product-pic-medium-right" src="pics/atlantis/data.png">
+			  <div class="text-small" style="width: 100%">
+			  	For example, "Destination" is a pretty important attribute, while "Maximum Takeoff Weight" is probably less relevant to the users. After determining what data was valuable and what was not, I began modeling that data out on paper, sketching out groupings of information.
+			  	<p>Once I got a feel for the data I would be working with, I was introduced to my users and stakeholders. I summarized their needs and mapped specific data and ways to display data to the individuals with whom will be using this display.</p>
+			  </div>
+			  <img class="product-pic-medium" src="pics/atlantis/data2.jpg" style="margin-left: 5%; margin-right: 2%">
+			  <img class="product-pic-medium" src="pics/atlantis/data3.jpg" style="margin-right: 5%; margin-left: 2%;">
+			</div>
 
-  	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
+			<button class="accordion">Wireframing</button>
+			<div class="panel">
+			  <img class="c3" src="pics/atlantis/wireframe1.jpeg">	
+			  <div class="c3-mobile">
+			  	This was my initial idea, and I liked it because it gave at-a-glance information for every mode of transport. However, it didn’t really address the PTF pass and it also can only hold 30-40 data points at a time, which, combined, made this initial sketch a deal breaker.
+			  </div>
+			  <img class="c3" src="pics/atlantis/wireframe2.jpg">	
+			  <div class="c3-mobile">
+			  	My second idea took a more classic approach by utilizing tables, but I also added extra information panels along the top. I liked the timeline idea, so I added a small timeline to this design, and I also added a map and weather data, relevant information I thought travelers might find useful.
+			  </div>
+			  <img class="c3" src="pics/atlantis/wireframe3.jpg">	
+			 
+			  <div class="c3-mobile">
+			  	My final design reused elements from the second design, but arranged them in what I think is a clearer and more visually appealing manner. I shortened the weather portion to three days of information, added a section at the bottom regarding the PTF pass (which I would later remove), and sized the data tables accordingly.
+			  </div>
+			  <div class="c3-desktop">
+			  	This was my initial idea, and I liked it because it gave at-a-glance information for every mode of transport. However, it didn’t really address the PTF pass and it also can only hold 30-40 data points at a time, which, combined, made this initial sketch a deal breaker.
+			  </div>
+			  <div class="c3-desktop">
+			  	My second idea took a more classic approach by utilizing tables, but I also added extra information panels along the top. I liked the timeline idea, so I added a small timeline to this design, and I also added a map and weather data, relevant information I thought travelers might find useful.
+			  </div>
+			  <div class="c3-desktop">
+			  	My final design reused elements from the second design, but arranged them in what I think is a clearer and more visually appealing manner. I shortened the weather portion to three days of information, added a section at the bottom regarding the PTF pass (which I would later remove), and sized the data tables accordingly.
+			  </div>
+
+			  <p style="text-align: center">After selecting the third design as the one with which I would move forward, the next step was transforming the sketch into a digital design. I started this process with simple boxes and lines.</p>
+			  <img class="product-pic-bigger" src="pics/atlantis/wireframe4.jpg">
+			  <p style="text-align: center">Next, I started experimenting with text, color, and filling in the middle section.</p>
+			  <img class="product-pic-bigger" src="pics/atlantis/wireframe5.png">
+			  <p style="text-align: center">After filling in more data, I chose the following color scheme.</p>
+			  <img class="product-pic-bigger" src="pics/atlantis/color.png">
+			</div>
+
+			<button class="accordion">Why It Works</button>
+			<div class="panel">
+			  <img class="product-pic-medium" src="pics/atlantis/panel1.png" style="margin-left: 10%; margin-top: 20px">
+			  <div class="caption" style="width: 40%">
+			  	<p>1) PTF eligible flights are highlighted with a check mark.</p>
+
+				<p>2) Cancelled flights are in a separate section so the user can quickly and easily see if their flight has been cancelled rather than scanning through the enitre table to try to find it.</p>
+
+				<p>3) Delayed flights are highlighted for the same reason.</p>
+
+				<p>4) Extraneous information is left out.</p>
+			  </div>
+
+			  <img class="product-pic-medium" src="pics/atlantis/panel2.png" style="margin-left: 10%; margin-top: 20px">
+			  <div class="caption" style="width: 40%">
+			  	<p>1) The timeline allows for quick and easy lookup of the next ferry, plane, and train.</p>
+
+				<p>2) The map is clear and easy to read. It oscillates between nearby islands and gives more information on each screen.</p>
+
+				<p>3) The three dots at the bottom of the map provide feedforward to the users.</p>
+
+				<p>4) The weather is highlighted but at the bottom of the screen, so people can focus on the more time-sensitive information.</p>
+			  </div>
+
+			  <img class="product-pic-medium" src="pics/atlantis/panel3.png" style="margin-left: 10%; margin-top: 20px">
+			  <div class="caption" style="width: 40%">
+			  	<p>1) Like the first panel, table format provides easy-to-read information.</p>
+
+				<p>2) Every other row is highlighted for ease of use.</p>
+
+				<p>3) Current time is highlighted in the corner.</p>
+
+				<p>4) Icons are used for easy identification of transport methods.</p>
+			  </div>
+			</div>
+
+	  	</div>
+
+	  	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
+	</div>
   </body>
 
   <script src="js/general.js"></script>
