chess store done

--- a/chess.html
+++ b/chess.html
@@ -15,45 +15,47 @@
 		<div class="page-nav-item right" onclick="openPage('index.html')">HOME ></div>
 	</div>
   	<div class="page-title">Chess Store</div>
-  	<div class="project-info">Spring 2017 | Application Design and Development</div>
-  	<div class="content margin-small">
-		<div class="summary"><div class="subheader2">Context</div>Lorem ipsum...</div>
-		
-		<div class="summary"><div class="subheader2">Team</div>Lorem ipsum...</div>
-		
-		<div class="summary">
-		<div class="subheader2">Skills</div> 
-		<li>Lorem ipsum...</li> 
-		<div class="subheader2">Tools</div> 
-		<li>Lorem ipsum...</li>
-		</div>
-		
-		<div class="summary"><div class="subheader2">Problem Statement</div> 
-		Lorem ipsum...
-		<div class="subheader2">Project Vision</div>
-		Lorem ipsum...
-		</div>
+  	<div class="project-info">
+  		Spring 2017 | Application Design and Development | <a href="https://github.com/emilyporat/ChessStore">Code</a>
   	</div>
+  	<div id="chess" class="margin-small">
+	  	<div class="content">
+			<div class="summary">
+				<div class="subheader2">Context
+				</div>This project was completed throughout Application Design and Development (67-272), a core course of the IS curriculum. This class provides students with the concepts and techniques to design and develop software applications, and to understand the design process.</div>
+			
+			<div class="summary"><div class="subheader2">Team</div>This was an individual project throughout the entire semester.</div>
+			
+			<div class="summary">
+				<div class="subheader2">Skills</div> 
+					<li>Entity Relationship Diagrams</li> 
+					<li>Wireframing</li>
+					<li>MVC Architecture</li>
+				<div class="subheader2">Tools/Technology</div> 
+					<li>Git</li>
+					<li>Ruby on Rails</li>
+					<li>JavaScript</li> 
+					<li>HTML/CSS</li> 
+				</div>
+			
+			<div class="summary"><div class="subheader2">Problem Statement</div> 
+				Professor Heimann's sons (twins Alex and Mark) are looking to combine their love for chess with their entrepreneurial ways by starting up the A & M Chess Store, an online chess store that sells chess supplies to schools and other educational institutions at wholesale prices. <p>Your job this semester is to construct an initial version of the Chess Store online application that will help schools order chess supplies and employees get those items shipped on time.</p>
+			</div>
+	  	</div>
 
-  	<div class="page-title">Process</div>
-  	<div class="process-overview margin-small">
+	  	<div class="page-title">Final Product</div>
+	  	<div>
+	  		<div class="final-product-text">
+	  			View the code <a href="https://github.com/emilyporat/ChessStore" target="_blank">here!</a> Selected screens are below:
+	  		</div>
+	  		<img class="product-pic" src="pics/chess/home.jpeg" style="width: 65%">
+	  		<div class="caption">This is the home page. It offers quick information about available items.</div>
+	  		<img class="product-pic" src="pics/chess/cart.jpeg" style="width: 65%">
+	  		<div class="caption">Users can easily add or remove items from their shopping cart.</div>
+	  	</div>
 
-		<button class="accordion">Something</button>
-		<div class="panel">
-		  <p>Lorem ipsum...	
-		</div>
-  	</div>
-
-  	<div class="page-title">Final Product</div>
-  	<div class="margin-small">
-  		<div class="final-product-text">
-  			View the full prototype <a href="website" target="_blank">here!</a> Selected screens are below:
-  		</div>
-  		<img class="product-pic" src="whatever">
-  		<div class="caption">This is a caption</div>
-  	</div>
-
-  	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
+	  	<img src="pics/arrow.png" id="arrow-up" onclick="slideUp()">
+	 </div>
   </body>
 
   <script src="js/general.js"></script>
